--- a/LTV Calculation.ipynb
+++ b/LTV Calculation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "a5b07364",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
        "1         1     153.71               6.5          Used  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "7356a55d",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "c6e0cf1b",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "1  1/2/2019           4500       3480.36"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "ec04b942",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "1   Feb          Apparel      SALE20            20"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "996cea4f",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
        "Index(['Month', 'Product_Category', 'Coupon_Code', 'Discount_pct'], dtype='object')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "a73ee800",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "950fe4a2",
    "metadata": {},
    "outputs": [
@@ -302,11 +302,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting xlrd\n",
-      "  Downloading xlrd-2.0.2-py2.py3-none-any.whl.metadata (3.5 kB)\n",
-      "Downloading xlrd-2.0.2-py2.py3-none-any.whl (96 kB)\n",
-      "Installing collected packages: xlrd\n",
-      "Successfully installed xlrd-2.0.2\n",
+      "Requirement already satisfied: xlrd in c:\\users\\dbyst\\miniconda3\\lib\\site-packages (2.0.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -317,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "id": "07f49098",
    "metadata": {},
    "outputs": [
@@ -373,7 +369,7 @@
        "1       13047      M  California             43"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "9e875bcb",
    "metadata": {},
    "outputs": [
@@ -395,7 +391,7 @@
        "Index(['CustomerID', 'Gender', 'Location', 'Tenure_Months'], dtype='object')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "2f4f6708",
    "metadata": {},
    "outputs": [
@@ -424,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "9602f05b",
    "metadata": {},
    "outputs": [
@@ -474,7 +470,7 @@
        "1           Office  0.1"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "id": "eeb2b2d4",
    "metadata": {},
    "outputs": [
@@ -496,7 +492,7 @@
        "Index(['Product_Category', 'GST'], dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "7a5d57f2",
    "metadata": {},
    "outputs": [
@@ -528,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "2008c859",
    "metadata": {},
    "outputs": [],
@@ -538,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "1d875a09",
    "metadata": {},
    "outputs": [],
@@ -550,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "897c5645",
    "metadata": {},
    "outputs": [],
@@ -582,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "id": "328f655f",
    "metadata": {},
    "outputs": [
@@ -708,7 +704,7 @@
        "[2 rows x 21 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "c50da8ee",
    "metadata": {},
    "outputs": [
@@ -744,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "e3715faf",
    "metadata": {},
    "outputs": [
@@ -752,34 +748,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting lifetimes\n",
-      "  Downloading Lifetimes-0.11.3-py3-none-any.whl.metadata (4.8 kB)\n",
+      "Requirement already satisfied: lifetimes in c:\\users\\dbyst\\miniconda3\\lib\\site-packages (0.11.3)\n",
       "Requirement already satisfied: numpy>=1.10.0 in c:\\users\\dbyst\\miniconda3\\lib\\site-packages (from lifetimes) (2.3.0)\n",
       "Requirement already satisfied: scipy>=1.0.0 in c:\\users\\dbyst\\miniconda3\\lib\\site-packages (from lifetimes) (1.16.0)\n",
       "Requirement already satisfied: pandas>=0.24.0 in c:\\users\\dbyst\\miniconda3\\lib\\site-packages (from lifetimes) (2.3.0)\n",
-      "Collecting autograd>=1.2.0 (from lifetimes)\n",
-      "  Downloading autograd-1.8.0-py3-none-any.whl.metadata (7.5 kB)\n",
-      "Collecting dill>=0.2.6 (from lifetimes)\n",
-      "  Downloading dill-0.4.0-py3-none-any.whl.metadata (10 kB)\n",
+      "Requirement already satisfied: autograd>=1.2.0 in c:\\users\\dbyst\\miniconda3\\lib\\site-packages (from lifetimes) (1.8.0)\n",
+      "Requirement already satisfied: dill>=0.2.6 in c:\\users\\dbyst\\miniconda3\\lib\\site-packages (from lifetimes) (0.4.0)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\dbyst\\miniconda3\\lib\\site-packages (from pandas>=0.24.0->lifetimes) (2.9.0.post0)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\dbyst\\miniconda3\\lib\\site-packages (from pandas>=0.24.0->lifetimes) (2025.2)\n",
       "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\dbyst\\miniconda3\\lib\\site-packages (from pandas>=0.24.0->lifetimes) (2025.2)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\dbyst\\miniconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas>=0.24.0->lifetimes) (1.17.0)\n",
-      "Downloading Lifetimes-0.11.3-py3-none-any.whl (584 kB)\n",
-      "   ---------------------------------------- 0.0/584.2 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 0.0/584.2 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 0.0/584.2 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 0.0/584.2 kB ? eta -:--:--\n",
-      "   ----------------- ---------------------- 262.1/584.2 kB ? eta -:--:--\n",
-      "   ----------------- ---------------------- 262.1/584.2 kB ? eta -:--:--\n",
-      "   ----------------- ---------------------- 262.1/584.2 kB ? eta -:--:--\n",
-      "   ----------------- ---------------------- 262.1/584.2 kB ? eta -:--:--\n",
-      "   ----------------- ---------------------- 262.1/584.2 kB ? eta -:--:--\n",
-      "   -------------------------------------- 584.2/584.2 kB 288.7 kB/s eta 0:00:00\n",
-      "Downloading autograd-1.8.0-py3-none-any.whl (51 kB)\n",
-      "Downloading dill-0.4.0-py3-none-any.whl (119 kB)\n",
-      "Installing collected packages: dill, autograd, lifetimes\n",
-      "Successfully installed autograd-1.8.0 dill-0.4.0 lifetimes-0.11.3\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -790,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "id": "40bec2d2",
    "metadata": {},
    "outputs": [
@@ -823,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "id": "3ef139e8",
    "metadata": {},
    "outputs": [
@@ -833,7 +811,7 @@
        "<lifetimes.BetaGeoFitter: fitted with 1153 subjects, a: 0.50, alpha: 61.81, b: 1.46, r: 0.61>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "id": "10de3099",
    "metadata": {},
    "outputs": [
@@ -857,7 +835,7 @@
        "<lifetimes.GammaGammaFitter: fitted with 534 subjects, p: 0.62, q: 3.84, v: 6323.75>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "id": "663aa82e",
    "metadata": {},
    "outputs": [
@@ -941,7 +919,7 @@
        "14606           13327.959479"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +941,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "id": "42aca716",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>recency</th>\n",
+       "      <th>T</th>\n",
+       "      <th>monetary_value</th>\n",
+       "      <th>predicted_purchases_6m</th>\n",
+       "      <th>predicted_avg_value</th>\n",
+       "      <th>predicted_LTV_6m</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12347</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>169.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.418871</td>\n",
+       "      <td>1389.001199</td>\n",
+       "      <td>581.812384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12348</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.644901</td>\n",
+       "      <td>1389.001199</td>\n",
+       "      <td>895.767812</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            frequency  recency      T  monetary_value  predicted_purchases_6m  \\\n",
+       "CustomerID                                                                      \n",
+       "12347             0.0      0.0  169.0             0.0                0.418871   \n",
+       "12348             0.0      0.0   79.0             0.0                0.644901   \n",
+       "\n",
+       "            predicted_avg_value  predicted_LTV_6m  \n",
+       "CustomerID                                         \n",
+       "12347               1389.001199        581.812384  \n",
+       "12348               1389.001199        895.767812  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "95b55751",
    "metadata": {},
    "outputs": [],
@@ -977,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "id": "dcd1372b",
    "metadata": {},
    "outputs": [
@@ -985,7 +1055,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\dbyst\\OneDrive\\Desktop\\Neue Fische Bootcamp\\da-analytics-engineering-project\n"
+      "c:\\Users\\dbyst\\OneDrive\\Desktop\\Neue Fische Bootcamp\\LTV-Capstone-Project\n"
      ]
     }
    ],
